修改获取最新文件的函数，添加查询文件中行数的函数和修改查询文件不够行数的逻辑处理

--- a/conf/setting.ini
+++ b/conf/setting.ini
@@ -13,7 +13,19 @@ CreateMeetingResponse = adminPhoneId
 INFO_FILE = C:\Users\tangl\PycharmProjects\MeetingClientLogAlert\logs\MeetingClientInfo.log
 #错误日志的文件路径
 ERROR_FILE = C:\Users\tangl\PycharmProjects\MeetingClientLogAlert\logs\MeetingClientError.log
-#单个文件的大小，单位名称为MB
+#单个文件的大小单位名称为MB
 FILE_SIZE = 100
 #轮训保留的日志文件个数
 ROTATION_NUMBER = 10
+
+[TIME_NUMBER]
+#设置系统时间大于最新文件创建时间的描述
+OS_COMPARE_FILE_TIME = 50
+#每次循环间隔时间
+INTERVAL_TIME = 25
+#设置文件中的行数
+COUNT_NUMBER = 1400
+#总体等待日志写入的时间
+COUNT_WAIT_TIME = 15
+#等待日志继续写入的时间间隔
+INTERVAL_KEY_TIME = 1
