定期重启按键精灵

--- a/conf/setting.ini
+++ b/conf/setting.ini
@@ -29,3 +29,7 @@ COUNT_NUMBER = 1400
 COUNT_WAIT_TIME = 15
 #等待日志继续写入的时间间隔
 INTERVAL_KEY_TIME = 1
+
+[exe]
+anjianjingling = D:\按键精灵\按键精灵\按键精灵2014\按键精灵2014.exe
+restart_time = 3600
