定期重启按键精灵

--- a/conf/setting.ini
+++ b/conf/setting.ini
@@ -32,4 +32,5 @@ INTERVAL_KEY_TIME = 1
 
 [exe]
 anjianjingling = D:\按键精灵\按键精灵\按键精灵2014\按键精灵2014.exe
+anjianjingling_exe = 按键精灵2014.exe
 restart_time = 3600
