添加了声音报警，并优化了一下日志判断的逻辑

--- a/conf/setting.ini
+++ b/conf/setting.ini
@@ -19,11 +19,19 @@ ROTATION_NUMBER = 10
 
 [TIME_NUMBER]
 #设置系统时间大于最新文件创建时间的描述
-OS_COMPARE_FILE_TIME = 50
+OS_COMPARE_FILE_TIME = 60
 #每次循环间隔时间
-INTERVAL_TIME = 25
+INTERVAL_TIME = 30
 
 [exe]
 anjianjingling = D:\按键精灵\按键精灵\按键精灵2014\按键精灵2014.exe
 anjianjingling_exe = 按键精灵2014.exe
 restart_time = 3600
+
+[text]
+#按键精灵有问题不产生新日志的提示音
+ajjl_warning_text = 按键精灵日志没有更新，已进行重启
+#按键精灵连续三次重启仍无效的提示音
+ajjl_error_text = 按键精灵连续重启三次，指针失效无法正常进行会议终端的操作
+#创建会议失败的提示音
+meeting_warning_text = 创建会议有问题
